# Skor-Simulator

./: EPL_Data.xlsx  README.md  main.py  pdf_viewer.html  requirements.txt
.streamlit/: pyproject.toml
